2023-10-11T01:16:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6476719953 # 853
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
* notice: last 14d: unq all: 4 32
* notice: prev accum: outdated-unq outdated-all / unq all: 250 525 / 266 560
* notice: next accum: outdated-unq outdated-all / unq all: 251 528 / 266 560
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-26] / []

2023-10-10T16:24:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6472094746 # 852
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
* notice: last 14d: unq all: 4 33
* notice: prev accum: outdated-unq outdated-all / unq all: 250 525 / 265 557
* notice: next accum: outdated-unq outdated-all / unq all: 250 525 / 266 560
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -1 / +2 +5 -0 -0 / 2 5
* notice: removed / changed dates: [] / [2023-09-26 2023-10-10]

2023-10-10T08:22:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6466636214 # 851
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-10
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 250 525 / 264 555
* notice: next accum: outdated-unq outdated-all / unq all: 250 525 / 265 557
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-26 2023-10-10]

2023-10-09T16:22:31Z: