@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-11T01:16:03Z",
+  "timestamp" : "2023-10-11T08:22:50Z",
   "count_outdated" : 528,
   "uniques_outdated" : 251,
-  "count" : 560,
-  "uniques" : 266,
+  "count" : 561,
+  "uniques" : 267,
   "clones" : [
     {
       "timestamp": "2023-09-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -112,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
