@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-09-27T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -61,6 +61,11 @@
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 5,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
