@@ -1,3 +1,12 @@
+2023-10-11T08:22:50Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6479889609 # 854
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
+* notice: last 14d: unq all: 4 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 251 528 / 266 560
+* notice: next accum: outdated-unq outdated-all / unq all: 251 528 / 267 561
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-27 2023-10-11]
+
 2023-10-11T01:16:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6476719953 # 853
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-11
